fixing button contrast & adding generate button

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   color: rgb(51, 51, 51);
 }
 
+button:focus {
+  outline: none;
+}
+
 button {
   font-family: "Mulish", sans-serif;
 }
@@ -47,15 +51,14 @@ svg {
   flex-direction: column;
   position: absolute;
   bottom: 0%;
-  /* opacity: 0; */
+  opacity: 0;
   background: rgb(160, 115, 115);
   padding: 1rem;
   width: 80%;
   border-radius: 1rem 1rem 0 0;
-  /* We are adding adjustement class */
-  /* transform: translateY(140px); */
+  transform: translateY(140px);
   transition: all 0.5s ease-in-out;
-  /* pointer-events: none; */
+  pointer-events: none;
 }
 
 .sliders.active {
